# qRG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/qrg/: __init__.py  wannier.py  wannier.pyi
tests/: test_smoke.py  test_wannier.py
